# osm-is-it-open

./: .eslintrc.json  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FUTURE_OPENING_HOURS_PORT.md  LICENSE  MAIN_APP_HOURS_PLAN.md  README.md  dev.sh  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.package.json  tsup.config.ts  typedoc.json  vitest.config.ts
.github/workflows/: publish.yml  test.yml  test_docs.yml
backend/: test_opening_hours.py
backend/app/: main.py  models.py  opening_hours.py  overpass.py  poi_categories.py
docs/api/: hierarchy.html  index.html  modules.html
docs/api/assets/: highlight.css  navigation.js  search.js
docs/api/classes/: opening_hours.html
docs/api/enums/: HourCycle.html
docs/api/functions/: OpeningHoursEditor.html  OpeningHoursSchedule.html
docs/api/interfaces/: OpeningHoursEditorProps.html  OpeningHoursScheduleProps.html  nominatim_object.html
docs/api/media/: CHANGELOG.md  CONTRIBUTING.md
examples/: main.css  main.tsx  vite.config.ts
frontend/: HOURS_PACKAGE_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Map.tsx
frontend/src/config/: map.ts
frontend/src/types/: poi.ts
src/: index.ts  model.ts  styles.css
src/components/: DayRow.tsx  OpeningHours.tsx  OpeningHoursEditor.tsx  OpeningHoursSchedule.tsx  RangeChip.tsx  editorLayout.ts  types.ts
src/locales/: index.ts
src/utils/: date.ts
tests/: components.test.tsx  comprehensive.test.ts  editor.test.ts
(+4 files in other folders)
